webserver/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "3.69.0"
    }
  }
}

# automatically read into the credentials from the env var AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION
provider "aws" {}

# if we do not provide a value for the variable, the user will be prompted to enter a value during `apply`
variable "subnet_prefix" {
  # all three proerpties are optional
  description = "cidr block for the subnet"
  default = "10.0.1.0/24"
  type = string
}

# Create a VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = {
      Name: "main"
  }
}

#create internet gateway and attach it to vpc so it can connect to internet
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}

# create custom route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0" # send all traffic through the gateway for IPv4
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0" # send all traffic through the gateway for IPv6
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "public"
  }
}

#create a subnet
resource "aws_subnet" "main" {
  vpc_id     = aws_vpc.main.id
  cidr_block = var.subnet_prefix // get from variable
  availability_zone = "us-east-1a"

  tags = {
    Name = "main"
  }
}

#Associate subnet with Route Table
resource "aws_route_table_association" "_a" {
  subnet_id      = aws_subnet.main.id
  route_table_id = aws_route_table.public.id
}

# Create Security Group to allow port 22 (SSH), 80 (HTTP), 443 (HTTPS)
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

# Create a network interface with an ip in the subnet (the web server internal IP)
resource "aws_network_interface" "web_server_nic" {
  subnet_id       = aws_subnet.main.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
  tags = {
      Name = "web_server_nic"
  }
}

# Assign an elastic IP to the network interface (the public IP for the web server map to the interal IP)
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web_server_nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [
    aws_internet_gateway.gw # EIP require IGW to exist prior to association
  ]
}

# print output to the console after the resource is created
output "server_public_ip" {
    value = aws_eip.one.public_ip
}

# Create Ubuntu server and install/enable apache2
resource "aws_instance" "web_server" {
  ami           = "ami-083654bd07b5da81d" # can be found in the Launch instance wizard through UI
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"

  # assign the network IP to the instance
  network_interface {
    network_interface_id = aws_network_interface.web_server_nic.id
    device_index         = 0
  }
  key_name = "main-key" # allow ssh access through main.key.pem 

  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install apache2 -y
              sudo systemctl start apache2
              sudo bash -c 'echo my first web server > /var/www/html/index.html'
              EOF

  tags = {
      Name = "ubuntu"
  }
}

output "server_private_ip" {
    value = aws_instance.web_server.private_ip
}
